<?xml version="1.0"?>
<package format="2">
  <name>project11_transformations</name>
  <version>1.0.0</version>
  <description>The project11_transformations package</description>
    <!-- version 0.0.0 original -->
    <author email="roland@ccom.unh.edu">Roland Arsenault</author>
    <maintainer email="roland@ccom.unh.edu">Roland Arsenault</maintainer>
    <!-- version 1.0.0 modified -->
    <maintainer email="marcos.barrera@seafloorsystems.com">Marcos Barrera</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>project11</depend>
  <depend>roscpp</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>marine_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>message_generation</depend>
  <depend>geodesy</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
